--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -78,6 +78,8 @@
                   order="first, after HiddenFolderIconProvider"
                   id="DefaultFolderIconProvider"/>
 
+    <fileBasedIndex implementation="com.mallowigi.icons.associations.FileAssociationsIndex"/>
+
     <projectViewNodeDecorator implementation="com.mallowigi.tree.DefaultFoldersDecorator"/>
     <projectViewNodeDecorator implementation="com.mallowigi.tree.DefaultFilesDecorator"/>
     <projectViewNodeDecorator implementation="com.mallowigi.tree.HollowFoldersDecorator"/>
