feat(actions): add support for creating custom file associations
- Introduced `AddFileAssociationAction` for defining new file associations.
- Incorporated a new action icon for better UI visibility in project view.
- Updated `BundledAssociations` to allow internal insertion of custom associations.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -172,6 +172,14 @@
       <separator/>
     </group>
 
+    <action class="com.mallowigi.actions.AddFileAssociationAction"
+            id="AddAssociationAction"
+            text="Add Association"
+            description="Add a new association"
+            icon="/actions/add.svg">
+      <add-to-group group-id="ProjectViewPopupMenu"/>
+    </action>
+
   </actions>
 
   <description><![CDATA[
