feat(actions): add support for creating custom file associations
- Introduced `AddFileAssociationAction` for defining new file associations.
- Incorporated a new action icon for better UI visibility in project view.
- Updated `BundledAssociations` to allow internal insertion of custom associations.

--- a/common/src/main/resources/messages/AtomFileIconsBundle.properties
+++ b/common/src/main/resources/messages/AtomFileIconsBundle.properties
@@ -192,3 +192,6 @@ SettingsForm.useTestsIcons.checkbox=Use Tests Icons
 SettingsForm.useTestsIcons.tooltip=Use different icons for test files
 SettingsForm.isNewIconsEnabled.text=Enable New Icons (WIP)
 SettingsForm.isNewIconsEnabled.toolTipText=Discover the Atom Material New UI Icons (Work In Progress)
+action.AddAssociationAction.text=Add Association from File
+action.AddAssociationAction.description=Add a new association from this file
+AtomAssocConfig.IconEditor.empty=Icon is invalid or missing
