feat(icons): add folder icon association and enhance validation across associations

--- a/common/src/main/resources/messages/AtomFileIconsBundle.properties
+++ b/common/src/main/resources/messages/AtomFileIconsBundle.properties
@@ -21,6 +21,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
+action.AddFileAssociationAction.description=Add a new icon association from this file
+action.AddFileAssociationAction.text=Change File Icon
+action.AddFolderAssociationAction.description=Add a new folder icon association from this folder
+action.AddFolderAssociationAction.text=Change Folder Icon
 action.BiggerIconsAction.description=Toggle custom icon size
 action.BiggerIconsAction.text=Toggle Custom Icon Size
 action.CustomLineHeightAction.description=Toggle custom line height
@@ -31,10 +35,10 @@ action.EnableFileIconsAction.description=Enable file icons
 action.EnableFileIconsAction.text=File Icons
 action.EnableMonochromeIconsAction.description=Enable monochrome icons
 action.EnableMonochromeIconsAction.text=Monochrome Icons
-action.EnableSaturationIconsAction.description=Enable saturated icons
-action.EnableSaturationIconsAction.text=Saturated Icons
 action.EnablePsiIconsAction.description=Enable PSI Icons
 action.EnablePsiIconsAction.text=PSI Icons
+action.EnableSaturationIconsAction.description=Enable saturated icons
+action.EnableSaturationIconsAction.text=Saturated Icons
 action.EnableUIIconsAction.description=Enable UI Icons
 action.EnableUIIconsAction.text=UI Icons
 action.HideFileIcons.description=Hide file icons
@@ -72,6 +76,7 @@ AssociationsForm.folderIconsTable.columns.touched=Edited?
 AssociationsForm.this.border=Custom Associations
 AssociationsForm.title=Custom Associations (Deprecated)
 AtomAssocConfig.ColorEditor.empty=Color must be defined
+AtomAssocConfig.IconEditor.empty=Icon is invalid or missing
 AtomAssocConfig.NameEditor.empty=Please enter a name
 AtomAssocConfig.NameEditor.unique=Value must be unique
 AtomAssocConfig.PatternEditor.empty=Enter a regular expression (example: `.*\\.(extension)$`)
@@ -153,6 +158,8 @@ SettingsForm.hollowFoldersCheckbox.text=Hollow Folders
 SettingsForm.hollowFoldersCheckbox.toolTipText=Set folders whose files are open in editors in a "hollow" state.
 SettingsForm.iconPacks=Icon Packs
 SettingsForm.iconPacks.tooltip=Toggle specific icon packs
+SettingsForm.isNewIconsEnabled.text=Enable New Icons (WIP)
+SettingsForm.isNewIconsEnabled.toolTipText=Discover the Atom Material New UI Icons (Work In Progress)
 SettingsForm.lowPowerSwitch.text=Low Power Mode
 SettingsForm.lowPowerSwitch.toolTipText=Reduce power consumption by disabling project view decorators (turn this off if you plan to use the plugin with JetBrains Gateway)
 SettingsForm.monochromeCheckbox.text=Monochrome Icons
@@ -174,10 +181,10 @@ SettingsForm.useAngularIcons.checkbox=Use Angular Icons
 SettingsForm.useAngularIcons.tooltip=Use specific Angular Icons (controller, service, etc)
 SettingsForm.useAngularIconsOld.checkbox=Use Angular Icons (Old Icon)
 SettingsForm.useAngularIconsOld.tooltip=Use specific Angular Icons (controller, service, etc)
-SettingsForm.useNextJSIcons.checkbox=Use NextJS Icons
-SettingsForm.useNextJSIcons.tooltip=Use specific NextJS Icons (page, error, etc)
 SettingsForm.useNestIcons.checkbox=Use Nest Icons
 SettingsForm.useNestIcons.tooltip=Use specific Nest Icons (controller, middleware, etc)
+SettingsForm.useNextJSIcons.checkbox=Use NextJS Icons
+SettingsForm.useNextJSIcons.tooltip=Use specific NextJS Icons (page, error, etc)
 SettingsForm.useNgRxIcons.checkbox=Use NgRx Icons
 SettingsForm.useNgRxIcons.tooltip=Use specific NgRx Icons (actions, entities, etc)
 SettingsForm.useRailsIcons.checkbox=Use Rails Custom Icons
@@ -190,8 +197,3 @@ SettingsForm.useRubyIcons.checkbox=Use Ruby PSI Icons
 SettingsForm.useRubyIcons.tooltip="Use Ruby PSI Icons instead of File Icons"
 SettingsForm.useTestsIcons.checkbox=Use Tests Icons
 SettingsForm.useTestsIcons.tooltip=Use different icons for test files
-SettingsForm.isNewIconsEnabled.text=Enable New Icons (WIP)
-SettingsForm.isNewIconsEnabled.toolTipText=Discover the Atom Material New UI Icons (Work In Progress)
-action.AddAssociationAction.text=Add Association from File
-action.AddAssociationAction.description=Add a new association from this file
-AtomAssocConfig.IconEditor.empty=Icon is invalid or missing
