Add support for a new CSS icon in icon generator
Introduced a new CSS icon and updated configurations, including `icon_associations.xml`, to support the icon for `.css` and `.tss` files. Added settings for toggling the new CSS icon and modified relevant classes to ensure proper handling and prioritization. This improves customization and usability for CSS-related files.

--- a/common/src/main/resources/messages/AtomFileIconsBundle.properties
+++ b/common/src/main/resources/messages/AtomFileIconsBundle.properties
@@ -181,6 +181,8 @@ SettingsForm.useAngularIcons.checkbox=Use Angular Icons
 SettingsForm.useAngularIcons.tooltip=Use specific Angular Icons (controller, service, etc)
 SettingsForm.useAngularIconsOld.checkbox=Use Angular Icons (Old Icon)
 SettingsForm.useAngularIconsOld.tooltip=Use specific Angular Icons (controller, service, etc)
+SettingsForm.useCssIcon.checkbox=Use New CSS Icon
+SettingsForm.useCssIcon.tooltip=Use the new CSS Icon
 SettingsForm.useNestIcons.checkbox=Use Nest Icons
 SettingsForm.useNestIcons.tooltip=Use specific Nest Icons (controller, middleware, etc)
 SettingsForm.useNextJSIcons.checkbox=Use NextJS Icons
